update to design

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -148,51 +148,6 @@ The work of Sannino on the use of secondary stimulation in formative interventio
 In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools. -->
 
 
-
-## Exploring issues and context from practitioner interviews and existing research
-
-While the literature on game making and other forms of digital making is extensive, much has a focus on curricula driven, personal knowledge. Research in the domain of informal learning and the resulting characteristics and emerging tensions is less prevalent. In addition the process of writing interview questions and the conversational process of semi-structured interviews helped expose new streams of thought, that which while present in existing researched helped bring them into clearer focus.
-
-**Summary of background of interviewees**
-
-Saskia Leggett is a researcher who was active in the in Creative Family Learning program under direction of Ricarosa Roque. She took a leading role in creating the programme's support resources. Matt Curinga is an academic at Columbia and teaches in educational technology and computer science. He is also active in a non-profit organisation, Zero Day Camp, promoting learning coding and engineering through engaging projects. Dave  Potts is a professional programmer and a parent and volunteer at Coder Dojo which is a volunteer run teaching technology monthly event. James Clegg is PGCE Computing student/teacher and volunteer student helper for the game making programme.
-
-**Summary of themes emerging**
-
-In my analysis, I have proritised data which in forms the first research question and specifically addressing barriers and tensions for both practitioners and participants which exist in this domain of activity.
-
-<!-- NOTE - REVIEW THIS BASED ON THEORETICAL LANGUAGE - PERHAPS OBSTACLES, CONTRADICTIONS, TENSIONS AND INTERVENTIONS. -->
-
-
-_Table of initial data_
-
-https://docs.google.com/document/d/1aEF0EsZRe-Ovok2VP7ouYH_v-SdepnNnXFhLtj6SseU/edit
-
-<!--
- Convert here.
-https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
-
--->
-
-|Issue                    | Instances |
-| --------------------------------------------------------------------------------------------------------------- | -------------- |
-| Barrier: Isolation during problems solving increases frustration and inhibits learning                                                      | 3         |
-| Tension: the goal for students to be self-directed vs. the advantages of providing a shared collaborative foundation for production         | 4         |
-| Tactic: Non-coding activities amd games to increase group connections as a good preparation for coding related challenges and frustrations. | 5         |
-| Barrier: students not considering them selves as STEM / coding types of people                                                              |           |
-| Barrier: logistical issues of time and equipment in school settings                                                                         |           |
-
-**Additional short commentary**
-
-The themes that emerged above.
-
-One key issue is the clash of cultures. EDIT DOWN AND COMMENT
-
-
-    There's this idea of a clash of cultures where to learn like the dominant school culture, you have to release some of your self-identity or you need to learn to bridge these worlds. ... (in) the literature, that there's this resistance of seeing yourself as someone who does STEM, as someone who does computer science. It's like we're not people that do that. And I think by doing it with their family, like there's no better way to kind of mitigate that effect and that hesitation, that barrier, because they're all becoming your whole family, like your, your closest identity is becoming people that write code or people that make robots.
-
-This interview references research already explored in the literature review concerning identity and alienation from STEM contexts.  
-
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
 
@@ -270,16 +225,13 @@ https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/
 
 ### Description of levels of activity illustrated using the vignette
 
-The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements.
+The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements. It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals.
+
 
 <!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
-
-It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals.
-
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses. While this chapter focuses primarily on the tools and resources, future chapter also draw on this framework for wider analysis. -->
 
 <!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
-
 
 
 <!-- Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth. -->
@@ -294,7 +246,7 @@ As explored in the literature review, there are several wider objectives of the 
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v1.png){width=95%}
 
-NOTE - CAN ADD THE OBJECTIVES INTO THE ARROWS ON THE DIAGRAM
+<!-- NOTE - CAN ADD THE OBJECTIVES / LEADING ACTIVITIES INTO THE ARROWS ON THE DIAGRAM -->
 
 <!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
 
@@ -327,21 +279,19 @@ There are diverse end audiences for the games. The final target audience are stu
 ![Carrot eater game with an self made arcade box made from cardboard](./Pictures/carroteater2.jpg){width=95%}
 REPLACE WITH DIFFERENT IMAGE?
 
-While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. A different example of the tension between competing motivations at this larger level of activity is explored in example 4.1 of this chapter and related analysis is continued in chapter six.
+While the broad aim of making a game to share is tacitly agreed through participation, there are also diverse motivations stemming from environmental factors in the interrelated actors in this activity which bleed into the tensions which emerge at this level. In the vignette and surrounding data, Toby pays close attention to the challenge and variety of the game playing experience for his projected audience of players. A different example of the tension between competing motivations at this larger level of activity is explored in example 1 of this chapter and related analysis is continued in chapter six.
 
 In the vignette above, I draw the participants attention to the showcasing of their games to an external audience. Toby begins the session playing his own game. During the course of this session he invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed.
 
 
 <!-- In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.    -->
-
-
 <!--
 NOTE - More on large scope in AT terms? What is needed here? -->
 
 
-#### Mid-level objective - Implementing game elements
+#### Mid-level objective - Constructing a game feature by feature
 
-At this scope of activity, using the terminology of Engestrom in 3GAT, the object of the activity is the game code and the broad objective is to alter and add  new features to the game using tools available in the learning environment.  
+At this scope of activity, participants work on the game code and and audio and graphical assets to achieve the broad objective is to alter and add new features to the game using tools available in the learning environment.  
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -365,14 +315,13 @@ By this stage, the process of collecting a user generated list of features and t
 
 <!-- In the example above Toby progresses from playtesting his own game to altering it. The code to change the layout of the platforms of the game is already included in the starting template. Thus is able add a new platform by making simple code changes. Toby retests the game immediately by clicking on the preview element of the code environment.  -->
 
-Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process (see below) Toby is able to browse a collection of game design patterns (see chapter two and glossary) for the chosen game type of a platformer was in place. He selects the pattern named  _moving enemies_.
-
 <!-- However within that wider objective there may be a variety of goals depending on the participant. In this case Toby's goal is addresses the challenge and variety of the game playing experience. -->
-
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
-By this stage, participant had access to a diversity of tools, resources and processes. A summary table with short descriptions and links to the resources used are included as an appendix 4.x.  Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
+
+Overall activity at this level was driven by learners setting goals and requesting help to implement game features. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
+<!-- A summary table with short descriptions and links to the resources used are included as an appendix 4.x.   -->
 
     "Mick: So we’ve got two ones. Here’s the tutorial and there’s the examples of code so you can compare what you are doing and see where the new code should be placed."
 
@@ -409,9 +358,7 @@ In contrast, some tasks are new to Toby and are performed more hesitantly. In th
 <!--NOTE As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers. -->
 
 
-Identifying shifts in participant activity in terms of scope aids analysis of the complex and interwoven cultural, social and personal actions [@rogoff_observing_1995]. Above Toby shifts between to the wide activity of making a game and sharing it with peers to the narrower action on implementing a concrete code structure. DEVELOP?
-
-A key concept in 3GAT is that analysis of community processes must recognise that activity shift and transform over time.  The next section offers a concise description of the evolution of tool use in different phases of the study with an aim to situate later analysis of emerging tensions in the use of tools, resources and processes in the subsequent section.
+Identifying shifts in participant activity in terms of scope aids analysis of the complex and interwoven cultural, social and personal actions [@rogoff_observing_1995]. Above Toby shifts between to the wide activity of making a game and sharing it with peers to the narrower action on implementing a concrete code structure. This aspect is developed in chapter five in more detail. In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate later analysis of emerging tensions in the use of tools, resources and processes in the subsequent section.
 
 
 <!-- In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five.  -->
@@ -452,13 +399,13 @@ The following overview of tool use by stage concisely explore the rationale for 
 <!-- Table from
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
 
-| **Phase, Name and Date**| **Description** | **Starting Resources**         
+<!-- | **Phase, Name and Date**| **Description** | **Starting Resources**         
 |--------|------------|--------------|
 |P1: Oct 2017 - Dec 2018; Experimental Course  | Participants started with no set plan or toolset and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. After several weeks, a minimal incomplete starting game code template was introduced in response to student need.  Then One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students and the creation of a “half baked” game template |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
 | P2: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
 | P3: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
 | P4: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
-
+ -->
 
 The following sections briefly outline tools and processes giving a synthesised overview. Later sections explore tools use in more depth.
 
@@ -542,31 +489,19 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
 
 ### P2: The game making using suggested patterns.
 
-By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants.
-
-The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials.
-
-The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.
+By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials. The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.
 
 ### P3: Adding a process drama
 
-P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
-
-The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
+P3 used the same toolset as P2 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens. The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
 ### P4: Adapting to MakeCode Arcade and more formal settings
 
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter.
-
-In 2019 MakeCode Arcade was launched to make games using a shared authoring system to Microbit controller. As that systems was designed to be easy to use by novices
-
-I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2]. I have included short analysis of the tool and those resources in this book chapter [@chesterman_game_2023].
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map, a process which is explored in a later section of this chapter. In 2019 MakeCode Arcade was launched to make games using a shared authoring system to Microbit controller. As that systems was designed to be easy to use by novices I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P2 [^2]. I have included short analysis of the tool and those resources in this book chapter [@chesterman_game_2023].
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
-
-The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail a responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation.
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail a responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation.
 
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
@@ -614,8 +549,7 @@ When researching hands-on tinkering in Science museums Bevan and Petrich [-@petr
 
 Research on _concept maps_ [@canas2003summary] as methods for teachers and researchers to identify key learning suited to particular computing projects. Has traction for NCCE quick read. The value of facilitators mapping out concept which are likely to occur in project work can help with x, y and z.
 
-The knock on effect on reducing barriers to agency is of particular interest to this study.
-BUT IS THIS ADDRESSSED HERE?
+
 <!-- Another chapter in this collection identified concept maps and observation as methods for teachers and researchers to identify key learning suited to particular computing projects.  -->
 
 One of the outcomes of my research was to extract some of the concepts and practices that learners engaged with when making games from hours of recorded material. While some concepts are common to existing computational thinking frameworks others, including systems thinking concepts, are more unique to game making. Table 4.x. shows my resulting map of learning dimensions for the 3M game making model.
@@ -632,29 +566,8 @@ One of the outcomes of my research was to extract some of the concepts and pract
 | Input Event |   | Reusing and Remixing      |
 
 
-This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts. To further aid practitioners, in P5 I restructured paper and online resources on game design patterns to included links to online descriptions of the concepts in the learning dimensions map. The following boxed section outlines a designed mission card which identifies the more abstract concepts embedded in the more concrete design missions.
+This process of mapping this framework is potentially of use for teachers and other researchers to help their observation of students in game making activities to align with design, coding and computational concepts.
 
-BOX BEGINS
-
-Your mission is to apply the following pattern to your game. There are supporting step-by-step resources available if you need them. When you finish be sure to reflect on how adding this pattern helps your understanding of the computing concepts and similar patterns listed. This concludes your mission.  
-
-* **Name of Game Design Pattern:** Jumping on Enemies to Zap them
-
-* **Type Pattern:** Game Mechanic
-
-* **Description:** If the player is descending from a jump when they touch the enemy the player is zapped and in this case disappears.
-
-* **Need for Pattern:** Enemies create challenge and being able to jump on an enemy is a good way of clearing the area you want to explore.
-
-* **Coding Concepts involved:** Arrays[^8], Change Listener[^9]
-
-* **Links to other Computing Patterns:** Systems Dynamics[^10]
-
-* **Related Game Patterns:** You'll need to have added the **Add Enemies** pattern to your game before you can add this one.
-
-BOX ENDS
-
-While the process of creating these cards of game design patterns linked to the underlying framework is labour intensive, the process offers several potential benefits which may merit the effort, including linking curricular concepts to more concrete experience and aid in navigating the learning experience.
 
 
 
